envs/multi-site/ingress-ctrl.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: LoadBalancer          # or NodePort
  ports:
    - name: http
      port: 80
      nodePort: 30080
      targetPort: 80
    - name: https
      port: 443
      nodePort: 30443
      targetPort: 443
  selector:
    app.kubernetes.io/name: ingress-nginx
