envs/multi-site/indexer-final.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sa-indexer-ingress
  namespace: site-a
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: "nginx"
  rules:
    - host: wazuh.itm.home
      http:
        paths:
          - path: /indexer
            pathType: Prefix
            backend:
              service:
                name: sa-indexer
                port:
                  number: 9200
