envs/multi-site/overall-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sa-indexer-ingress
  namespace: wazuh
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
      - dashboard.wazuh.itm.home
  ingressClassName: "nginx"
  rules:
    - host: dashboard.wazuh.itm.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dashboard
                port:
                  number: 443
    - host: indexer.sa.wazuh.itm.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sa-indexer
                port:
                  number: 9200
