envs/multi-site/sc-indexer-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wazuh-dashboard-ingress
  namespace: site-a
spec:
  ingressClassName: "nginx"
  rules:
  - host: indexer.sa.wazuh.itm.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sa-indexer
            port:
              number: 9200
