envs/multi-site/test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: manger-dns-ingress
  namespace: site-a
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: "nginx"
  rules:
    - host: YOUR-DUCKDNS-SUBDOMAIN.duckdns.org
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: wazuh
                port:
                  number: 55000
          - path: /registration
            pathType: Prefix
            backend:
              service:
                name: wazuh
                port:
                  number: 1515
          - path: /reporting
            pathType: Prefix
            backend:
              service:
                name: wazuh
                port:
                  number: 1514
